--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="calculator">
             <form>
                 <div class="display">
-                    <input type="text" name = "display">
+                    <input type="text" name = "display" readonly>
                 </div>
                 <div>
                     <input type="button" value = "AC" onclick="display.value = ''" class = "operator">
@@ -42,7 +42,7 @@
                 <div>
                     <input type="button" value = "00" onclick="display.value += '00'">
                     <input type="button" value = "0" onclick="display.value += '0'">
-                    <input type="button" value = "=" onclick="display.value = eval(display.value)" class="equal operator">
+                    <input type="button" value = "=" onclick="display.value = eval(display.value)" class="equal">
                 </div>
             </form>
         </div>
